--- a/app-java/src/main/AndroidManifest.xml
+++ b/app-java/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.MyApplication">
         <activity
             android:name=".view.image.PhotoViewActivity"
-            android:label="@string/app_name"
+            android:exported="true"
             android:theme="@style/Theme.MyApplication.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
