--- a/list-sample/src/main/AndroidManifest.xml
+++ b/list-sample/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tech.thdev.list">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -9,7 +8,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name="tech.thdev.list.MainActivity">
+        <activity
+            android:name="tech.thdev.list_view.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +18,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".RecyclerViewActivity" />
+        <activity android:name="tech.thdev.list_view.RecyclerViewActivity" />
     </application>
 
 </manifest>
